--- a/MiniProject/Certificate.tex
+++ b/MiniProject/Certificate.tex
@@ -1,5 +1,8 @@
 \thispagestyle{empty}
-\begin{doublespace}
+
+\usepackage{setspace}
+
+\begin{doublespacing}
 
 \begin{center}
 	\textsc{\textbf{\Large{Model Engineering College, Thrikkakara}}}
@@ -34,7 +37,7 @@
 	\begin{flushleft}
 		\hspace{-0.5cm}\textbf{\textsc{\normalsize{Project Co-ordinator}}}\\
 		\vspace{1cm}
-		\hspace{-0.5cm}\textbf{\textsc{\small{Coordinator Name}}}\\
+		\hspace{-0.5cm}\textbf{\textsc{\small{Dr.Sumitha Mathew}}}\\
 		\hspace{-0.5cm}\textsc{\small{Designation}}\\
 		\hspace{-0.5cm}\textsc{\small{Dept. of Electronics}}
 	\end{flushleft}
